force-app/main/default/objects/ProductPrices__c/ProductPrices__c.object-meta.xml
<CustomObject>
    <label>Product Prices</label>
    <nameField>
        <label>Product Prices Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Product Prices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>