force-app/main/default/objects/ProductPrices__c/fields/is_most_recent__c.field-meta.xml
<CustomField>
    <fullName>is_most_recent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Most Recent?</label>
    <type>Checkbox</type>
</CustomField>