force-app/main/default/objects/ProductPrices__c/fields/Map_Pricing_OR__c.field-meta.xml
<CustomField>
    <fullName>Map_Pricing_OR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked for any of the connected products, then it is checked here.</description>
    <label>MAP Pricing (OR)</label>
    <type>Checkbox</type>
</CustomField>