force-app/main/default/objects/ProductPrices__c/fields/Max_MAP_Pricing_Min__c.field-meta.xml
<CustomField>
    <fullName>Max_MAP_Pricing_Min__c</fullName>
    <description>The maximum amount of units to include in the Abacus pricelist export.
Will show the minimum, if multiple connected products have different values.</description>
    <label>Max MAP Pricing (Min)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>25</fullName>
            </value>
            <value>
                <fullName>100</fullName>
            </value>
            <value>
                <fullName>250</fullName>
            </value>
            <value>
                <fullName>500</fullName>
            </value>
            <value>
                <fullName>1000</fullName>
            </value>
            <value>
                <fullName>2500</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>