force-app/main/default/objects/ProductPrices__c/fields/Ordering_Number__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Number__c</fullName>
    <externalId>true</externalId>
    <label>Ordering Number</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>