force-app/main/default/objects/ProductPrices__c/fields/Price_USD_Sample_Size_10__c.field-meta.xml
<CustomField>
    <fullName>Price_USD_Sample_Size_10__c</fullName>
    <label>10+ Price USD</label>
    <precision>12</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>