force-app/main/default/objects/ProductPrices__c/fields/Product_Owner__c.field-meta.xml
<CustomField>
    <fullName>Product_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Responsible PM</description>
    <inlineHelpText>Responsible PM</inlineHelpText>
    <label>Product Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Product_Prices</relationshipName>
    <type>Lookup</type>
</CustomField>