force-app/main/default/objects/ProductPrices__c/validationRules/ProductPrice_Name_uniqueness.validationRule-meta.xml
<ValidationRule>
    <fullName>ProductPrice_Name_uniqueness</fullName>
    <active>true</active>
    <errorConditionFormula>Name = VLOOKUP($ObjectType.ProductPrices__c.Fields.Name, $ObjectType.ProductPrices__c.Fields.Name, Name) &amp;&amp; 
Id != VLOOKUP($ObjectType.ProductPrices__c.Fields.Id, $ObjectType.ProductPrices__c.Fields.Name, Name)</errorConditionFormula>
    <errorMessage>The Product Price Id has to be unique</errorMessage>
</ValidationRule>