force-app/main/default/objects/ProductPrices__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Name__c</columns>
    <columns>Ordering_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_USD_Sample_Size_10__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <label>All</label>
</ListView>