force-app/main/default/objects/ProductPrices__c/listViews/SHO_Stand_alone_prices.listView-meta.xml
<ListView>
    <fullName>SHO_Stand_alone_prices</fullName>
    <columns>NAME</columns>
    <columns>Product_Series__c</columns>
    <columns>Ordering_Number__c</columns>
    <columns>Max_MAP_Pricing_Min__c</columns>
    <columns>Price_USD_Sample_Size_1__c</columns>
    <columns>Price_USD_Sample_Size_10__c</columns>
    <columns>Price_USD_Sample_Size_50__c</columns>
    <columns>Price_USD_Sample_Size_100__c</columns>
    <columns>Price_USD_Sample_Size_250__c</columns>
    <columns>Price_USD_Sample_Size_500__c</columns>
    <columns>Price_USD_Sample_Size_1000__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Product_Owner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product_Center__c</field>
        <operation>equals</operation>
        <value>Short Range</value>
    </filters>
    <filters>
        <field>is_most_recent__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>SHO MAP prices</label>
</ListView>